--- a/хакатон 29.11.23.ipynb
+++ b/хакатон 29.11.23.ipynb
@@ -1306,8 +1306,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "marketing_dealerprice['product_name'] = marketing_dealerprice['product_name'].apply(lemmatize_text)\n",
-    "marketing_product['name'] = marketing_product['name'].apply(lemmatize_text)"
+    "marketing_dealerprice['product_name_lem'] = marketing_dealerprice['product_name'].apply(lemmatize_text)\n",
+    "marketing_product['name_lem'] = marketing_product['name'].apply(lemmatize_text)"
    ]
   },
   {
@@ -1328,7 +1328,7 @@
     }
    ],
    "source": [
-    "marketing_dealerprice['product_name'][0]"
+    "marketing_dealerprice['product_name_lem'][0]"
    ]
   },
   {
@@ -1361,9 +1361,9 @@
     }
    ],
    "source": [
-    "df_1 = marketing_dealerprice[['product_name']]\n",
-    "df_1 = df_1.rename(columns={'product_name': 'name'})\n",
-    "df_2 = marketing_product[['name']]\n",
+    "df_1 = marketing_dealerprice[['product_name_lem']]\n",
+    "df_1 = df_1.rename(columns={'product_name_lem': 'name'})\n",
+    "df_2 = marketing_product[['name_lem']]\n",
     "print(df_1.head())\n",
     "print('-'*100)\n",
     "print(df_2.head())\n",
@@ -2023,8 +2023,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'Антисептик многофункциональный ФБС, ГОСТ 5 л'\n",
-    "name = lemmatize_text(name)"
+    "name = 'Антисептик многофункциональный ФБС, ГОСТ 5 л'\n"
    ]
   },
   {
@@ -2090,6 +2089,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Тут косяк.\n",
+    "С индексом вывод названия, с полученным ключем ошибка"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -2122,6 +2129,36 @@
    "source": [
     "marketing_product.loc[marketing_product['id'].isin(z) , 'name']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id\n",
+       "245    0.874883\n",
+       "3      0.984236\n",
+       "443    1.000000\n",
+       "147    0.946363\n",
+       "502    1.000000\n",
+       "         ...   \n",
+       "127    0.946995\n",
+       "160    0.948438\n",
+       "74     0.986203\n",
+       "34     0.664414\n",
+       "52     0.945383\n",
+       "Name: 546408_1, Length: 494, dtype: float64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
