--- a/хакатон 29.11.23.ipynb
+++ b/хакатон 29.11.23.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "id": "32d8bbd5",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "id": "defc7169",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "id": "32c7ce21",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        " 'ТЗ Просепт.docx']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "id": "e4dd1446",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "id": "6496da1e",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "16  18  Мasterstroy_spb_OZON\\r\\n"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "id": "c5f06b14",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "id": "3b21a547",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "id": "dc96d082",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "4          2  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "id": "b396e967",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "5203          2  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "id": "2a124c00",
    "metadata": {},
    "outputs": [],
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "id": "561aba31",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "id": "b0f3cf1e",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        "4   189522867.0  150126216.0   0024-7-б           NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "id": "6b7e4fe7",
    "metadata": {},
    "outputs": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "id": "a045359f",
    "metadata": {},
    "outputs": [
@@ -973,7 +973,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "id": "22b7dee5",
    "metadata": {},
    "outputs": [],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "id": "9b5288d8",
    "metadata": {},
    "outputs": [],
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "id": "5a5d6eb3",
    "metadata": {},
    "outputs": [],
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "id": "79098afc",
    "metadata": {},
    "outputs": [],
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "id": "ff79a6ec",
    "metadata": {},
    "outputs": [],
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
    "id": "3e30d434",
    "metadata": {},
    "outputs": [
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "id": "40a9c9f3",
    "metadata": {},
    "outputs": [],
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "id": "b3ad1f6f",
    "metadata": {},
    "outputs": [],
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "id": "e3f94c17",
    "metadata": {},
    "outputs": [
@@ -1322,7 +1322,7 @@
        "'средство универсальное prosept universal spray, 500мл'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 87,
    "id": "78e25bc3",
    "metadata": {},
    "outputs": [
@@ -1348,15 +1348,15 @@
       "3           удалитель ржавчины prosept rust remover 0,5л 023-05\n",
       "4   средство моющее для бани и сауны prosept multipower wood 1л\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "                                                                                    name\n",
-      "0                                 антисептик невымываемый prosept ultra концентрат / 1 л\n",
-      "1                                        антигололед - 32 prosept готовый состав / 12 кг\n",
-      "2                                               герметик акриловый цвет сосна, ф/п 600мл\n",
-      "3  кондиционер для белья с ароматом  королевского ириса crystal rinser концентрат / 2 л \n",
-      "4                                                   герметик акриловой  цвет белый, 7 кг\n",
+      "                                                           name\n",
+      "0         средство универсальное prosept universal spray, 500мл\n",
+      "1      концентрат prosept multipower для мытья полов, цитрус 1л\n",
+      "2  средство для чистки люстр prosept universal anti-dust, 500мл\n",
+      "3           удалитель ржавчины prosept rust remover 0,5л 023-05\n",
+      "4   средство моющее для бани и сауны prosept multipower wood 1л\n",
       "----------------------------------------------------------------------------------------------------\n",
       "(20416, 1)\n",
-      "(494, 1)\n"
+      "(20416, 1)\n"
      ]
     }
    ],
@@ -1364,6 +1364,7 @@
     "df_1 = marketing_dealerprice[['product_name_lem']]\n",
     "df_1 = df_1.rename(columns={'product_name_lem': 'name'})\n",
     "df_2 = marketing_product[['name_lem']]\n",
+    "df_2 = df_1.rename(columns={'name_lem': 'name'})\n",
     "print(df_1.head())\n",
     "print('-'*100)\n",
     "print(df_2.head())\n",
@@ -1375,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1437,7 @@
        "4   средство моющее для бани и сауны prosept multipower wood 1л"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1447,16 +1448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20910, 1)"
+       "(40832, 1)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1594,7 @@
        "4   5  651258          2         403"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1615,7 @@
        "       '534666258'], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1633,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 90,
    "id": "130e59fa",
    "metadata": {},
    "outputs": [],
@@ -1646,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "d043349c",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1676,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1745,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2028,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2061,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2098,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2107,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2132,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2169,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
