--- a/хакатон 29.11.23.ipynb
+++ b/хакатон 29.11.23.ipynb
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 91,
    "id": "78e25bc3",
    "metadata": {},
    "outputs": [
@@ -1348,15 +1348,15 @@
       "3           удалитель ржавчины prosept rust remover 0,5л 023-05\n",
       "4   средство моющее для бани и сауны prosept multipower wood 1л\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "                                                           name\n",
-      "0         средство универсальное prosept universal spray, 500мл\n",
-      "1      концентрат prosept multipower для мытья полов, цитрус 1л\n",
-      "2  средство для чистки люстр prosept universal anti-dust, 500мл\n",
-      "3           удалитель ржавчины prosept rust remover 0,5л 023-05\n",
-      "4   средство моющее для бани и сауны prosept multipower wood 1л\n",
+      "                                                                                    name\n",
+      "0                                 антисептик невымываемый prosept ultra концентрат / 1 л\n",
+      "1                                        антигололед - 32 prosept готовый состав / 12 кг\n",
+      "2                                               герметик акриловый цвет сосна, ф/п 600мл\n",
+      "3  кондиционер для белья с ароматом  королевского ириса crystal rinser концентрат / 2 л \n",
+      "4                                                   герметик акриловой  цвет белый, 7 кг\n",
       "----------------------------------------------------------------------------------------------------\n",
       "(20416, 1)\n",
-      "(20416, 1)\n"
+      "(494, 1)\n"
      ]
     }
    ],
@@ -1364,7 +1364,7 @@
     "df_1 = marketing_dealerprice[['product_name_lem']]\n",
     "df_1 = df_1.rename(columns={'product_name_lem': 'name'})\n",
     "df_2 = marketing_product[['name_lem']]\n",
-    "df_2 = df_1.rename(columns={'name_lem': 'name'})\n",
+    "df_2 = df_2.rename(columns={'name_lem': 'name'})\n",
     "print(df_1.head())\n",
     "print('-'*100)\n",
     "print(df_2.head())\n",
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
        "4   средство моющее для бани и сауны prosept multipower wood 1л"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,16 +1448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(40832, 1)"
+       "(20910, 1)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
